--- a/beansdb_log.conf
+++ b/beansdb_log.conf
@@ -3,11 +3,11 @@ strict init = true
 reload conf period = 5M
 buffer max = 1MB
 buffer min = 1024
-default format = "%d.%us %-6V (%c:%F:%L) - %m%n"
+default format = "%d.%us %-6V (%t:%F:%L) - %m%n"
 file perms = 600
 [formats]
-simple = "%d %m%n"
+simple = "%d.%us # %m%n"
 [rules]
 beansdb.NOTICE     "./beansdb-error.log"
-beansdb.=INFO      "./beansdb-access.log"
+beansdb.=INFO      "./beansdb-access.log"; simple
 
