Delete unused test

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 SUBDIRS = third-party/zlog-1.2 src doc
-DIST_SUBDIRS = test python
+DIST_SUBDIRS = python
 
 EXTRA_DIST = python src/crc32.c src/clock_gettime_stub.c src/ae_epoll.c src/ae_kqueue.c src/ae_select.c CREDITS AUTHORS LICENSE
